compile_errors.txt
g++ -g -Wall -fpermissive -std=c++17 -c -o main.o code/main.cpp
code/main.cpp: In constructor ‘ComplexPlane::ComplexPlane(const string&, int, int, float, float, const string&, const string&, const sf::Color&, float, unsigned int)’:
code/main.cpp:60:11: warning: ‘ComplexPlane::m_baseHeight’ will be initialized after [-Wreorder]
   60 |     float m_baseHeight;
      |           ^~~~~~~~~~~~
code/main.cpp:53:11: warning:   ‘float ComplexPlane::m_aspectRatio’ [-Wreorder]
   53 |     float m_aspectRatio;
      |           ^~~~~~~~~~~~~
code/main.cpp:81:1: warning:   when initialized here [-Wreorder]
   81 | ComplexPlane::ComplexPlane(
      | ^~~~~~~~~~~~
code/main.cpp:64:12: warning: ‘ComplexPlane::m_presentationName’ will be initialized after [-Wreorder]
   64 |     string m_presentationName;
      |            ^~~~~~~~~~~~~~~~~~
code/main.cpp:63:12: warning:   ‘std::string ComplexPlane::m_textFile’ [-Wreorder]
   63 |     string m_textFile;
      |            ^~~~~~~~~~
code/main.cpp:81:1: warning:   when initialized here [-Wreorder]
   81 | ComplexPlane::ComplexPlane(
      | ^~~~~~~~~~~~
code/main.cpp:63:12: warning: ‘ComplexPlane::m_textFile’ will be initialized after [-Wreorder]
   63 |     string m_textFile;
      |            ^~~~~~~~~~
code/main.cpp:62:11: warning:   ‘sf::Color ComplexPlane::m_textColor’ [-Wreorder]
   62 |     Color m_textColor;
      |           ^~~~~~~~~~~
code/main.cpp:81:1: warning:   when initialized here [-Wreorder]
   81 | ComplexPlane::ComplexPlane(
      | ^~~~~~~~~~~~
code/main.cpp:62:11: warning: ‘ComplexPlane::m_textColor’ will be initialized after [-Wreorder]
   62 |     Color m_textColor;
      |           ^~~~~~~~~~~
code/main.cpp:61:11: warning:   ‘float ComplexPlane::m_baseZoom’ [-Wreorder]
   61 |     float m_baseZoom;
      |           ^~~~~~~~~~
code/main.cpp:81:1: warning:   when initialized here [-Wreorder]
   81 | ComplexPlane::ComplexPlane(
      | ^~~~~~~~~~~~
code/main.cpp:61:11: warning: ‘ComplexPlane::m_baseZoom’ will be initialized after [-Wreorder]
   61 |     float m_baseZoom;
      |           ^~~~~~~~~~
code/main.cpp:58:18: warning:   ‘unsigned int ComplexPlane::m_maxIter’ [-Wreorder]
   58 |     unsigned int m_maxIter;
      |                  ^~~~~~~~~
code/main.cpp:81:1: warning:   when initialized here [-Wreorder]
   81 | ComplexPlane::ComplexPlane(
      | ^~~~~~~~~~~~
code/main.cpp:58:18: warning: ‘ComplexPlane::m_maxIter’ will be initialized after [-Wreorder]
   58 |     unsigned int m_maxIter;
      |                  ^~~~~~~~~
code/main.cpp:56:9: warning:   ‘int ComplexPlane::m_zoomCount’ [-Wreorder]
   56 |     int m_zoomCount;
      |         ^~~~~~~~~~~
code/main.cpp:81:1: warning:   when initialized here [-Wreorder]
   81 | ComplexPlane::ComplexPlane(
      | ^~~~~~~~~~~~
code/main.cpp: In function ‘int main()’:
code/main.cpp:289:18: error: cannot declare variable ‘complexPlane’ to be of abstract type ‘ComplexPlane’
  289 |     ComplexPlane complexPlane;
      |                  ^~~~~~~~~~~~
code/main.cpp:31:7: note:   because the following virtual functions are pure within ‘ComplexPlane’:
   31 | class ComplexPlane : public Drawable {
      |       ^~~~~~~~~~~~
In file included from /usr/include/SFML/Graphics/Shape.hpp:32,
                 from /usr/include/SFML/Graphics/CircleShape.hpp:32,
                 from /usr/include/SFML/Graphics.hpp:34,
                 from code/main.cpp:1:
/usr/include/SFML/Graphics/Drawable.hpp:69:18: note:     ‘virtual void sf::Drawable::draw(sf::RenderTarget&, sf::RenderStates) const’
   69 |     virtual void draw(RenderTarget& target, RenderStates states) const = 0;
      |                  ^~~~
make: *** [makefile:15: main.o] Error 1
